// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List displays the file link without Delete All button 1`] = `
<ul>
  <li>
    <a
      href="http://localhost:3001/"
    >
      file-img
    </a>
    <button
      className="qr-delete"
      onClick={[Function]}
      type="button"
    >
      <img
        alt="delete file"
        src="/delete.png"
      />
    </button>
  </li>
</ul>
`;

exports[`List displays the file links 1`] = `
<div>
  <button
    className="qr-delete-all"
    onClick={[Function]}
    type="button"
  >
    Delete All
  </button>
  <ul>
    <li>
      <a
        href="http://localhost:3001/"
      >
        file-img
      </a>
      <button
        className="qr-delete"
        onClick={[Function]}
        type="button"
      >
        <img
          alt="delete file"
          src="/delete.png"
        />
      </button>
    </li>
    <li>
      <a
        href="http://localhost:3001/"
      >
        file-audio
      </a>
      <button
        className="qr-delete"
        onClick={[Function]}
        type="button"
      >
        <img
          alt="delete file"
          src="/delete.png"
        />
      </button>
    </li>
  </ul>
</div>
`;

exports[`List displays upload without Delete All button 1`] = `
<ul
  className="custom"
>
  <li>
    <a
      href="http://localhost:3001/"
    >
      <img
        alt="preview"
        src="http://localhost:3001/"
      />
      <div>
        file-img
      </div>
    </a>
    <button
      className="qr-delete"
      onClick={[Function]}
      type="button"
    >
      <img
        alt="delete file"
        src="/delete.png"
      />
    </button>
  </li>
</ul>
`;

exports[`List displays uploads in their specific formats 1`] = `
<ul
  className="custom"
>
  <li>
    <a
      href="http://localhost:3001/"
    >
      <img
        alt="preview"
        src="http://localhost:3001/"
      />
      <div>
        file-img
      </div>
    </a>
  </li>
  <li>
    <audio
      controls={true}
      src="http://localhost:3001/"
    />
    <div>
      file-audio
    </div>
  </li>
</ul>
`;

exports[`List displays uploads with Delete All button 1`] = `
<div>
  <button
    className="qr-delete-all"
    onClick={[Function]}
    type="button"
  >
    Delete All
  </button>
  <ul
    className="custom"
  >
    <li>
      <a
        href="http://localhost:3001/"
      >
        <img
          alt="preview"
          src="http://localhost:3001/"
        />
        <div>
          file-img
        </div>
      </a>
      <button
        className="qr-delete"
        onClick={[Function]}
        type="button"
      >
        <img
          alt="delete file"
          src="/delete.png"
        />
      </button>
    </li>
    <li>
      <audio
        controls={true}
        src="http://localhost:3001/"
      />
      <div>
        file-audio
      </div>
      <button
        className="qr-delete"
        onClick={[Function]}
        type="button"
      >
        <img
          alt="delete file"
          src="/delete.png"
        />
      </button>
    </li>
  </ul>
</div>
`;

exports[`Profile image displays first file 1`] = `
<span>
  <img
    alt="avatar"
    className="profilePic"
    src="http://localhost:3001/"
  />
  <button
    className="qr-delete"
    onClick={[Function]}
    type="button"
  >
    <img
      alt="delete file"
      src="/delete.png"
    />
  </button>
</span>
`;

exports[`Profile image does not display delete button 1`] = `
<span>
  <img
    alt="avatar"
    className="profilePic"
    src="http://localhost:3001/"
  />
</span>
`;

exports[`Profile image is set to default empty tag 1`] = `
<div
  className="profilePic"
/>
`;
